fixed alignment issues and made benefits light mode responsive

--- a/components/App/Benefits/benefits.module.scss
+++ b/components/App/Benefits/benefits.module.scss
@@ -2,13 +2,35 @@
 @use '../../../styles/variables' as *;
 
 .wrapper {
-  h4 {
-    padding: 0.4rem 0 1rem;
+  position: relative;
+}
+
+.wrapper h4 {
+  padding: 0.4rem 0 0.2rem;
+}
+
+.light.wrapper h4 {
+  color: $light-mode-secondary;
+  text-align: center;
+  padding-bottom: 1rem;
+  
+  @include lg {
+    text-align: left;
+    padding-bottom: 0;
   }
+}
+
+.wrapper p {
+  font-size: 1.1rem;
 }
 
 .title {
   text-align: center;
+  padding-bottom: 3rem;
+
+  @include lg {
+    padding-bottom: 4rem;
+  }
 }
 
 .header {
@@ -19,46 +41,37 @@
   }
 }
 
-.margin-adjustment {
-  @include lg {
-    margin: -3rem 0 0;
-  }
-}
-
-.bullet-wrapper {
-  display: flex;
-  flex-direction: column;
-
-  @include md {
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-  }
+.wrapper ul {
+  display: grid;
+  gap: 0.75rem;
 }
 
 .img-wrapper {
-  max-width: 3rem;
-  padding: 4rem 0 0;
-
-  @include md {
-    margin: 0 auto;
-  }
+  text-align: center;
 
   @include lg {
-    margin: auto;
+    max-width: 3.5rem;
+    text-align: left;
   }
+}
+
+.img-wrapper img {
+  max-width: 3.5rem;
+  // margin: 0 auto;
 }
 
 .layout {
   display: grid;
+  gap: 4rem;
 
   @include md {
     gap: 1rem;
+    width: 100%;
   }
 
   @include lg {
     grid-template-columns: repeat(2, 1fr);
-    gap: 4rem;
+    gap: 5rem 2rem;
   }
 }
 
@@ -69,8 +82,17 @@
 
   li::marker {
     color: $ln-blue;
-    font-size: 1.3rem;
+    font-size: 0.9rem;
   }
 
   padding-left: 1rem;
+}
+
+.light.wrapper img{
+  // filter: invert(68%) sepia(48%) saturate(6883%) hue-rotate(203deg) brightness(93%) contrast(98%);
+  filter: invert(43%) sepia(94%) saturate(4000%) hue-rotate(206deg) brightness(97%) contrast(90%);;
+}
+
+.light.wrapper li::marker {
+  color: $light-mode-secondary;
 }
